[project]
name = "shoopdaloop-py"
version = "0.0.0"
description = "Python components for ShoopDaLoop: live looping application with DAW elements"
authors = [
  { name = "Sander Vocke", email = "sandervocke@gmail.com" },
]
maintainers = [
  { name = "Sander Vocke", email = "sandervocke@gmail.com" },
]
requires-python = ">=3.9"

# note: pyside6-essentials should normally be included, but it is not here.
# This wheel is built with the assumption that pyside will be provided
# in the python environment already (part of the build process).
dependencies = [
  "jsonschema==4.22.0",
  "numpy==1.26.4",
  "pyjacklib==0.1.1",
  "lupa==2.4",
  "appdirs==1.4.4",
  "sounddevice==0.5.0",
  "pywin32 ; platform_system == \"Windows\"",
]

[project.optional-dependencies]
test = [
  "pytest",
]
docs = [
  "sphinx",
  "sphinx-material",
  "sphinxcontrib-fulltoc",
  "sphinxcontrib-plantuml"
]

# Note: duplicated in root build_python_requirements.txt
[build-system]
requires = [
  "setuptools",
  "meson",
  "toml"
]